--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <p>hello je</p>
     <script src="./script/index.js"></script>
+    <script src="./script/multipleCondition.js"></script>
+    <script src="./script/array.js"></script>
+    <script src="./script/array-of-object.js"></script>
 </body>
 </html>
